# performant-rag-demo

./: .gitignore  README.md  frontend.py  pyproject.toml
app/: main.py
app/db/: __init__.py  qdrant_repo.py  util.py
app/services/: __init__.py  base.py  basedraft.py  customer_lookup.py  draft.py  draft_v1.py  draft_v2.py  draft_v3.py  draft_v4.py  qdrant_repo.py
app/types/: __init__.py  db.py  draft.py  prompts.py
app/util/: __init__.py  filterworkflow.py  postprocessor.py  query_engine.py  util.py
data/v1/: fake_product.md
data/v2/: fake_app.md  fake_product.md  fake_product_v2.md  fake_widget.md
data/v3/: fake_product.md
